tests/e2e/semantics/function_arg_type_mismatch.story
function foo a:boolean
    x = 0

foo(a:2)
